--- a/style.css
+++ b/style.css
@@ -1,65 +1,26 @@
-*{box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-body{
-margin: 20px;
+body {
+  margin: 20px;
 }
-.container{
-    display: grid;
-    grid-template-rows: repeat(4,20%);
-    grid-template-columns: repeat(10,10%);
-    row-gap: 10px;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-#card1{
-    grid-row-start: 1 ;
-    grid-column-start: 6;
-    grid-column-end: 7;
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
-#card2{
-    grid-row-start: 2 ;
-    grid-column-start: 5;
-    grid-column-end: 6;
-}
-#card3{
-    grid-row-start: 2 ;
-    grid-column-start: 7;
-    grid-column-end: 8;
-}
-#card4{
-    grid-row-start: 3 ;
-    grid-column-start: 4;
-    grid-column-end: 5;
-}
-#card5{
-    grid-row-start: 3 ;
-    grid-column-start: 6;
-    grid-column-end: 7;
-}
-#card6{
-    grid-row-start: 3 ;
-    grid-column-start: 8;
-    grid-column-end: 9;
-}
-#card7{
-    grid-row-start: 4 ;
-    grid-column-start: 3;
-    grid-column-end: 4;
-}
-#card8{
-    grid-row-start: 4 ;
-    grid-column-start: 5;
-    grid-column-end: 6;
-}
-#card9{
-    grid-row-start: 4 ;
-    grid-column-start: 7;
-    grid-column-end: 8;
-}
-#card10{
-    grid-row-start: 4 ;
-    grid-column-start: 9;
-    grid-column-end: 10;
-}
-img{
-    width: 100%;
-    height: 100%;
+
+img {
+  width: 9rem;
+  margin: 0.5rem;
 }
