--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,8 @@
   
   body {
     margin: 20px;
+    max-width: 100%;
+    overflow-x: hidden;
   }
   .container {
     display: flex;
@@ -25,4 +27,3 @@
     margin: 0.5rem;
   }
 
-  
